--- a/examples/jquery/carlos_rps.html
+++ b/examples/jquery/carlos_rps.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="rps.css">
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script type="text/javascript">
 var getRandomArbitrary;
